# operating_system-linux

./: .gitignore  _.cmake  __.cmake  build.h
acme_linux/: CMakeLists.txt  Makefile  _.cpp  _.h  _acme_linux.h  _factory.cpp  aaa_stdio_file.cpp  aaa_stdio_file.h  acme_dir.cpp  acme_dir.h  acme_directory.cpp  acme_directory.h  acme_file.cpp  acme_file.h  acme_linux.cbp  acme_path.cpp  acme_path.h  cmake_install.cmake  console.cpp  console.h  console_ncurses.cpp  deployment.rc  dir_context.cpp  dir_context.h  dir_system.cpp  dir_system.h  directory_context.cpp  directory_context.h  directory_system.cpp  directory_system.h  factory_exchange.cpp  file.cpp  file.h  file_context.cpp  file_context.h  file_system.cpp  file_system.h  framework.h  integration_context.cpp  integration_context.h  (+7 more)
apex_linux/: CMakeLists.txt  Makefile  _.cpp  _.h  _apex_linux.h  _apex_windows.vcxproj  _apex_windows_vs12.vcxproj  _factory.cpp  _references.txt  a.h  aaa_application.cpp  aaa_archive_palette.cpp  aaa_archive_palette.h  aaa_archive_printer.cpp  aaa_archive_printer.h  aaa_crypto.cpp  aaa_crypto.h  aaa_factory_exchange1.cpp  aaa_node_windows.h  aaa_os_context.cpp  aaa_os_context.h  aaa_service_pool.h  aaa_thread.cpp  aaa_timer.cpp  aaa_trace.cpp  aaa_want_to_remove_RoundWindowApp.h  aaa_want_to_remove_handle.cpp  aaa_want_to_remove_handle.h  aaa_want_to_remove_printer.cpp  aaa_want_to_remove_printer.h  aaa_want_to_remove_shell1.cpp  aaa_want_to_remove_simple_hold_handle.h  aaa_windows.h  apex_linux.cbp  apex_windows.def  apex_windows.vcxproj  apex_windows.vcxproj.filters  app_launcher.cpp  app_launcher.h  application.cpp  (+36 more)
audio_alsa/: CMakeLists.txt  _.h  _audio_alsa.h  _factory.cpp  aaa_want_to_remove_audio_alsa_command.h  aaa_want_to_remove_audio_mmsystem_command.h  audio_alsa.cbp  audio_mmsystem_wave_in.h  factory_exchange.cpp  factory_exchange.h  framework.h  snd_pcm.cpp  snd_pcm.h  translation.cpp  translation.h  wave_in.cpp  wave_in.h  wave_out.cpp  wave_out.h
audio_mixer_alsa/: CMakeLists.txt  Makefile  _.h  _audio_mixer_alsa.h  _factory.cpp  _library.h  aaa__library.h  aaa_thread.cpp  aaa_thread.h  audio_mixer.cpp  audio_mixer.h  audio_mixer_alsa.cbp  audio_mixer_mmsystem.def  audio_mixer_mmsystem.h  audio_mixer_mmsystem.vcxproj  audio_mixer_mmsystem.vcxproj.filters  audio_mixer_mmsystem_callback.cpp  audio_mixer_mmsystem_control.cpp  audio_mixer_mmsystem_control.h  audio_mixer_mmsystem_destination.cpp  audio_mixer_mmsystem_destination.h  audio_mixer_mmsystem_device.cpp  audio_mixer_mmsystem_device.h  audio_mixer_mmsystem_factory_exchange.cpp  audio_mixer_mmsystem_factory_exchange.h  audio_mixer_mmsystem_line_info.cpp  audio_mixer_mmsystem_line_info.h  audio_mixer_mmsystem_mixer.cpp  audio_mixer_mmsystem_mixer.h  audio_mixer_mmsystem_section.cpp  audio_mixer_mmsystem_section.h  audio_mixer_mmsystem_source.cpp  audio_mixer_mmsystem_source.h  audio_mixer_mmsystem_thread.cpp  audio_mixer_mmsystem_thread.h  audio_mixer_mmsystem_window.cpp  audio_mixer_mmsystem_window.h  callback.cpp  callback.h  cmake_install.cmake  (+19 more)
aura_linux/: CMakeLists.txt  Makefile  _.h  _aura_linux.h  _const.h  _factory.cpp  _references.txt  aaa_archive_palette.cpp  aaa_archive_palette.h  aaa_archive_printer.cpp  aaa_archive_printer.h  aaa_aura_linux.h  aaa_bitmap.cpp  aaa_brush.cpp  aaa_font.cpp  aaa_graphics.cpp  aaa_image.cpp  aaa_object.cpp  aaa_path.cpp  aaa_pen.cpp  aaa_printer.cpp  aaa_region.cpp  aaa_text.cpp  appindicator.h  aura_linux.cbp  cmake_install.cmake  deployment.rc  factory_exchange.cpp  font.cpp  framework.h  graphics.cpp  interaction_impl.cpp  interaction_impl.h  node.cpp  node.h  pen.cpp  printer.cpp  region.cpp  text.cpp
desktop_environment_gnome/: CMakeLists.txt  Makefile  _.cpp  _.h  _desktop_environment_gnome.h  _factory.cpp  _library.h  _references.txt  aaa_application.cpp  aaa_copydesk.cpp  aaa_display.cpp  aaa_display.h  aaa_gdk.cpp  aaa_gdk.h  aaa_monitor.cpp  aaa_monitor.h  aaa_notify_icon.cpp  aaa_notify_icon.h  aaa_windowing.cpp  appindicator.cpp  appindicator.h  clipboard_data.h  cmake_install.cmake  console.cpp  copydesk.cpp  copydesk.h  deployment.rc  desktop_environment_gnome.cbp  display.cpp  display.h  factory_exchange.cpp  framework.h  gdk.cpp  monitor.cpp  monitor.h  node.cpp  node.h  notify_icon.cpp  notify_icon.h  user.cpp  (+2 more)
desktop_environment_kde/: CMakeLists.txt  _.cpp  _.h  _desktop_environment_kde.h  _factory.cpp  _library.h  _references.txt  aaa__library.h  aaa_windowing.cpp  aaa_windowing.h  appindicator.cpp  appindicator.h  application.cpp  application.h  clipboard_data.h  copydesk.cpp  copydesk.h  deployment.rc  factory_exchange.cpp  factory_exchange.h  framework.h  gdk.cpp  gdk.h  gnome_direct.cpp  gnome_gnome.h  gnome_shared.h  gtk_clipboard.cpp  node.cpp  node.h  q_node_impl.cpp  user.cpp  windowing.cpp  windowing.h
desktop_environment_xfce/: CMakeLists.txt  _.cpp  _.h  _desktop_environment_xfce.h  _factory.cpp  aaa_application.cpp  aaa_copydesk.cpp  aaa_display.cpp  aaa_display.h  aaa_monitor.cpp  aaa_monitor.h  aaa_notify_icon.cpp  aaa_notify_icon.h  aaa_windowing.h  appindicator.cpp  appindicator.h  application.cpp  clipboard_data.h  copydesk.cpp  deployment.rc  display.cpp  display.h  factory_exchange.cpp  framework.h  gdk.cpp  gdk.h  monitor.cpp  monitor.h  node.cpp  node.h  node_xfce.cbp  notify_icon.cpp  notify_icon.h  user.cpp  windowing.cpp  windowing.h  xfce_direct.cpp  xfce_xfce.h
music_midi_alsa/: CMakeLists.txt  Makefile  _.cpp  _.h  _factory.cpp  _library.h  _music_midi_als.h  _music_midi_alsa.h  aaa_want_to_remove_music_midi_alsa_file.cpp  aaa_want_to_remove_music_midi_alsa_sequence.cpp  aaa_want_to_remove_music_midi_alsa_sequence.h  aaa_want_to_remove_music_midi_alsa_sequence_thread.cpp  aaa_want_to_remove_music_midi_alsa_sequence_thread.h  cmake_install.cmake  deployment.rc  factory_exchange.cpp  factory_exchange.h  framework.h  message_out.cpp  message_out.h  midi.cpp  midi.h  music_midi_alsa.cbp  music_midi_alsa.cpp  music_midi_alsa_file.h  music_midi_alsa_midi.cpp  music_midi_alsa_midi.h  music_midi_alsa_translation.h  out.cpp  out.h  seqlib.h  (+5 more)
(+758 files in other folders)
